@@ -31,10 +31,14 @@ $tag:IndEvo_Artillery",,Your $shipOrFleet disengages as the defence stations los
 IndEvo_ArtilleryDefeatPopulateOptions,DialogOptionSelected,$option == IndEvo_ArtilleryDefeatPopulateOptions,FireAll OpenInteractionDialog,,,
 ,,,,,,
 #watchtower,,,,,,
-IndEvo_derelictWatchtower,OpenInteractionDialog,"$IndEvo_isArtilleryActive score:9999
+IndEvo_derelictWatchtower,OpenInteractionDialog,"$IndEvo_isArtilleryActive score:2000
 $tag:IndEvo_watchtower",,"Any attempts at connecting to the $entityName get stifled by an obviously AI-backed counter-hack. Your engineers concede defeat after a few minutes to avoid a network breach.
 
 Disabling the entity backing the hacks will probably fix this.",0:defaultLeave:Leave,
+IndEvo_derelictWatchtower_notFunctional,OpenInteractionDialog,"$objectiveNonFunctional score:9999
+$tag:IndEvo_watchtower",,"The $entityName lies silent and any attempts at interfacing with it are unsuccessful - it might be in some kind of emergency shutdown.
+
+It is unknown if, and when, it might start working again.",0:defaultLeave:Leave,
 cob_hackPrompt_watchtower,COB_ConfirmPrompt,"$cob_action == hack
 $tag:IndEvo_watchtower score:1000",,"Hacking $aOrAn $shortName will clear your current target data out of the system, and stop it from registering your fleet while the hack is ongoing.
 
